@page RN24 Release notes for PAPILO 2.4

@section RN240 PaPILO 2.4.0

Features
--------


Performance improvements
------------------------


Interface changes
-----------------

### New API functions

### Changed parameters

- presolve.abortfac = 0.00080000000000000004: abort factor of weighted number of reductions for exhaustive presolving
- presolve.lpabortfac = 0.01: abort factor of weighted number of reductions for exhaustive presolving LPs

### New parameters with default values

- presolve.abortfacfast = 0.00080000000000000004: abort factor of weighted number of reductions for fast presolving
- presolve.abortfacmedium = 0.00080000000000000004: abort factor of weighted number of reductions for medium presolving

- presolve.lpabortfacfast = 0.01: abort factor of weighted number of reductions for fast presolving LPs
- presolve.lpabortfacmedium = 0.01: abort factor of weighted number of reductions for medium presolving LPs

### Data structures


Unit tests
----------


Testing
-------


Build system
------------


Fixed bugs
----------


Miscellaneous
-------------


Known issues
------------


@page RN23 Release notes for PAPILO 2.3

@section RN232 PaPILO 2.3.2

Fixed bugs
----------

- All fast presolvers: maintain changed activities of current and last round to avoid missing reductions
- FixContinuous: only fix column whose contribution deviates by at most epsilon in every row
- Components: identify fixing a component to an optimal solution as strong dual reduction

Build system
------------

Known issues
------------

@section RN231 PaPILO 2.3.1

Fixed bugs
----------

- DominatedCols: compress set of dominations topologically to avert memory exhaustions
- Input and Output: handle floating point numbers precisely in parsers and writers
- OPB-Parser: handle additional whitespaces
- ParallelColDetection: only merge integral parallel columns for integral column scale
- ParallelColDetection: reduce complexity of hole detection for integral parallel columns