@@ -34,7 +34,7 @@
 #define PAPILO_VERSION_PATCH 0
 #define PAPILO_VERSION_TWEAK 0
 
-#define PAPILO_API_VERSION 2
+#define PAPILO_API_VERSION 3
 
 #undef PAPILO_GITHASH_AVAILABLE
 #undef PAPILO_GITHASH
